# sbd2

./: .clang-format  CMakeLists.txt  DEBUG_TAPE.txt  DEBUG_TAPEOLD2.txt  First_Tape1.txt  Main_Tape.txt  README.md  Second_Tape1.txt  core  generate.py  index.txt  index_temp.txt  input.txt  main_tape.txt  main_tape_temp.txt  overflow.txt  overflow_old.txt
report/: alpha.csv  b10.csv  b100.csv  filesizes.csv  operations.csv  sbd1.aux  sbd1.fdb_latexmk  sbd1.fls  sbd1.rmd  sbd1.tex
src/: consts.hpp  cylinder.cpp  cylinder.hpp  helpers.cpp  helpers.hpp  index.cpp  index.hpp  main.cpp  sorting.hpp  tape.cpp  tape.hpp
tests/: 50_inserts.txt
